@@ -38,11 +38,8 @@ void prepare_commands(void);
 int equality_split(char *buffer, char **variable, char **value);
 int get_boolean(char *strg, int *bl);
 int is_animated_player(object *pl);
-int start_animation(object *who, object *activator, object *event, char *file, char *options);
+int start_animation(object *who, object *activator, object *event, const char *file);
 void animate(void);
-void initContextStack(void);
-void pushContext(CFPContext *context);
-CFPContext *popContext(void);
 CF_PLUGIN int initPlugin(const char *iversion, f_plug_api gethooksptr);
 CF_PLUGIN void *getPluginProperty(int *type, ...);
 CF_PLUGIN anim_move_result runPluginCommand(object *op, char *params);
