@@ -14,6 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Removed 'context' stuff as it isn't used here. Clean event handling.
+ plugins/cfanim/cfanim.c
+ plugins/cfanim/include/cfanim.h cfanim_proto.h
+Nicolas Weeger 2008-05-12
+
 Add 'moveto' command, and 'byname' victim type. Fix potential memory leak.
 Enable moves to take more than one tick.
  doc/Developers/plugins.doc/cfanim/animfiles.txt
